<!--
  ~ Class  :  strings.xml
  ~ Description : XML file for strings which used in app
  ~
  ~ Created by : KeyTalk IT Security BV on 2017
  ~ All rights reserved @ keytalk.com
  -->

<resources>

    <string name="app_name">KeyTalk</string>
    <string name="import_rccd">IMPORT CONFIGURATION</string>
    <string name="rccd_import_url_hint_text">Enter URL of configuration file (.rccd)</string>
    <string name="embedded_browser">Embedded</string>
    <string name="native_browser">Native</string>
    <string name="reset_text">Reset</string>
    <string name="reset_all_text">App reset</string>
    <string name="reset_session_text">Remove last issued certificate</string>
    <string name="browser_message_text">Please select your browser for loading the page. Do you want to continue?</string>
    <string name="browser_message_text_hint">Please select your browser for loading the page. Do you want to continue?</string>
    <string name="reset_message_text">This removes all previously imported providers, services and related certificates.</string>
    <string name="reset_session_message_text">This removes all previously imported certificates.</string>
    <string name="url_message_text">Enter a URL that points to an RCCD file.\n It is also possible to import an RCCD via an E-mail attachment.</string>
    <string name="email_message_text">It is also possible to import a KeyTalk configuration file (RCCD) via an e-mail attachment.</string>
    <string name="view_client_identifier_text">View client identifier</string>
    <string name="null_value">""</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="No_text">No</string>
    <string name="report_button">Report</string>
    <string name="OK_text">OK</string>
    <string name="install_text">Install</string>
    <string name="services">Services</string>
    <string name="open_text">Open</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="url_error_message">Please enter a valid URL that you would like to import from.</string>
    <string name="update_url_message">Do you want to change the server URL?</string>
    <string name="same_url_message">Please change your URL</string>
    <string name="retry">Retry</string>
    <string name="urlscreen_text">Please enter server URL</string>
    <string name="urlscreen_default_text">Server URL</string>
    <string name="update_text">Update</string>
    <string name="app_webview">KeyTalk WebView</string>
    <string name="group_header">Keytalk_Group_Header</string>
    <string name="email_rccd_import_confirm_text">Do you want to open this file with the KeyTalk app?</string>
    <string name="emailscreen_email_address">androidsupport@keytalk.com</string>
    <string name="emailscreen_subject">KeyTalk Android client - Error report</string>
    <string name="emailscreen_message">This is an e-mail to the KeyTalk support desk. Please replace this text with a description of the problem you are experiencing and what you were doing when the problem occurred.The attached log-file is required to let us help you as efficient as possible. It does not contain any personal information.\n\n</string>
    <string name="import_rccd_alert_title">Import Configuration File</string>
    <string name="view_client_identifier_message">During a support call we may ask you to provide this mobile device\'s unique number (for example, to block it in case it gets stolen).Please note down the following number and store it in a safe place:\n\n%s</string>
    <string name="permission_denied_message">You have denied some of the required permissions and application functionality  may not work as expected. Would you like to give the permissions? </string>
    <string name="phonestat_permission_alert_message">Unable to process your request without permission and application functionality  may not work as expected!</string>
    <string name="countdown_default_text">9</string>
    <string name="usernamescreen_header">Username</string>
    <string name="usernamescreen_text">Enter a username or select one of the presets presented below</string>
    <string name="usernamescreen_default_text">Username</string>
    <string name="usernamescreen_hardcoded_user">testuser@keytalk.local</string>
    <string name="usernamescreen_error_message_header">Error</string>
    <string name="usernamescreen_error_message">Please enter a valid username.</string>
    <string name="usernamescreen_error_message_button">&#160;&#160;&#160;OK&#160;&#160;&#160;</string>
    <string name="passwordscreen_header">Password </string>
    <string name="passwordscreen_text">Please enter a password - ‘%s’.</string>
    <string name="passwordscreen_default_text">Password</string>
    <string name="passwordscreen_header_button">Username</string>
    <string name="passwordscreen_error_message_header">Error</string>
    <string name="passwordscreen_error_message">Invalid credentials</string>
    <string name="password_error_message">Please enter a valid password.</string>
    <string name="passwordscreen_error_message_button">&#160;&#160;&#160;OK&#160;&#160;&#160;</string>
    <string name="passwordscreen_communication_message_header">Error</string>
    <string name="passwordscreen_communication_message">Communication problem.</string>
    <string name="passwordscreen_communication_message_button_1">&#160;&#160;&#160;OK&#160;&#160;&#160;</string>
    <string name="passwordscreen_communication_message_button_2">Report</string>
    <string name="authenticationpin_header">PIN</string>
    <string name="authenticationpin_text">Please enter a PIN for the user with username ‘%s’</string>
    <string name="authenticationpin_default_text">123</string>
    <string name="authenticationpin_header_button">Password</string>
    <string name="authenticationpin_error_message_header">Error</string>
    <string name="authenticationpin_error_message">Please enter a valid PIN number.</string>
    <string name="authenticationpin_error_message_button">&#160;&#160;&#160;OK&#160;&#160;&#160;</string>
    <string name="authenticationpin_communication_message_header">Error</string>
    <string name="authenticationpin_communication_message">Communication problem.</string>
    <string name="authenticationpin_communication_message_button_1">&#160;&#160;&#160;OK&#160;&#160;&#160;</string>
    <string name="authenticationpin_communication_message_button_2">Report</string>
    <string name="responsescreen_header">Challenge/Response</string>
    <string name="responsescreen_text">Please enter a response for the specific question ‘%s’</string>
    <string name="new_responsescreen_text">Please enter a response for the specific question</string>
    <string name="responsescreen_default_text">Response</string>
    <string name="responsescreen_header_button">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype Password</string>
    <string name="change_button_text">Change</string>
    <string name="invalid_oldpassword">Please enter valid old password.</string>
    <string name="invalid_newpassword">Please enter valid new password.</string>
    <string name="invalid_retypepassword">Please enter the new password again.</string>
    <string name="same_old_newpassword">Old password and new password can not be the same.</string>
    <string name="different_new_retypepassword">New and retyped password must be the same.</string>
    <string name="password_updated">Password has been changed, please login with the new password.</string>
    <string name="change_password_message">Please enter new password for the user with username ‘%s’ and click Change.\nPassword must be at least seven Character long with one number and one special symbol.</string>
    <string name="rccd_import">Configuration file import</string>
    <string name="language_change">Change Language</string>
    <string name="Language_header">Language:</string>
    <string-array name="language_arrays">
        <item>Select Language</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Dutch</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="about">About us</string>
    <string name="version"><b>Version</b></string>
    <string name="intall_date"><b>Install Date</b></string>
    <string name="authorise_title">Authorise Request</string>
    <string name="authorise_msg">To trust the corporate server certificate, please “Authorise” further authentications and install trust files or  “Abort”</string>
    <string name="about_message">This KeyTalk app enables the obtaining of digital certificates and associated crypto keys, for customers, employees and partners of companies that use the KeyTalk certificate life cycle and distribution solution. These certificates and keys are used for strong authentication and encrypted communication with corporate websites, as well as VPNs, and are often used to enable email encryption and email digital signing in combination with the mail client on your Android device.</string>
    <string name="service_title">Please select a service to request your certificate and encryption key</string>
    <string name="countdown_msg">Incorrect authentication credentials, please wait</string>
    <string name="trust">Trust</string>
</resources>
