<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Class  :  activity_change_password.xml
  ~ Description : XML file for change password screen
  ~
  ~ Created by : KeyTalk IT Security BV on 2017
  ~ All rights reserved @ keytalk.com
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keytalk.nextgen5.view.activities.ChangePasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/size_15dp" >

                <TextView
                    android:id="@+id/changepasswordscreen_text"
                    style="@style/screen_text"
                    android:text="@string/change_password_message" />

                <EditText
                    android:id="@+id/oldpassword_edittext"
                    style="@style/screen_edittext"
                    android:hint="@string/old_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/newpassword_edittext"
                    style="@style/screen_edittext"
                    android:hint="@string/new_password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/retypepassword_edittext"
                    style="@style/screen_edittext"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/passwordChangeButton"
                    style="@style/screen_button"
                    android:text="@string/change_button_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/countdown_widget" />

</FrameLayout>
